# sistemas-distribuidos-TP_Final

./: CMakeLists.txt
src/: run.sh
src/MPI/: main.c
src/OpenMP/: main.c
src/common/: CMakeLists.txt  common.c  common.h
src/mixed/: main.c
src/mpi/: alt.c  main.c
src/openmp/: main.c
src/secuencial/: main.c
src/test/: main.c
